[package]
name = "rust_rawinput"
version = "0.1.0"
authors = ["최재용 <jayong93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.8", features = ["everything", "debug", "impl-default"] }
lazy_static = "1.4.0"
tokio = {version = "0.2.19", features = ["sync"]}
