[package]
name = "rust_rawinput"
version = "0.4.3"
authors = ["최재용 <jayong93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.8", features = ["everything", "debug", "impl-default"] }
futures = "0.3.*"
serde = {version = "^1", features = ["derive"]}

[features]
print-debug = []